--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "vscode-terminal-api-example",
-	"displayName": "vscode-terminal-api-example",
-	"description": "abc",
+	"name": "vscode-terminal-git-palette",
+	"displayName": "Git Command Palette",
+	"description": "Eine praktische Git-Befehls-Palette für das VS Code Terminal.",
 	"version": "0.0.1",
-	"publisher": "vscode-samples",
+	"publisher": "Ebixx",
 	"private": true,
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/Ebiixx/vsc-git-terminal-command-palette"
 	},
 	"engines": {
 		"vscode": "^1.80.0"
@@ -21,92 +21,20 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onTerminalProfile:terminalTest.terminal-profile"
+		
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "terminalTest.createAndSend",
-				"title": "Terminal API: Create Terminal and Immediately Send"
-			},
-			{
-				"command": "terminalTest.createTerminal",
-				"title": "Terminal API: Create Terminal"
-			},
-			{
-				"command": "terminalTest.createTerminalHideFromUser",
-				"title": "Terminal API: Create Terminal (hideFromUser)"
-			},
-			{
-				"command": "terminalTest.createZshLoginShell",
-				"title": "Terminal API: Create Terminal (zsh login shell)"
-			},
-			{
-				"command": "terminalTest.dimensions",
-				"title": "Terminal API: Set dimensions"
-			},
-			{
-				"command": "terminalTest.dispose",
-				"title": "Terminal API: Dispose"
-			},
-			{
-				"command": "terminalTest.hide",
-				"title": "Terminal API: Hide"
-			},
-			{
-				"command": "terminalTest.onDidWriteTerminalData",
-				"title": "Terminal API: Attach data listener"
-			},
-			{
-				"command": "terminalTest.onDidChangeTerminalDimensions",
-				"title": "Terminal API: Attach dimensions listener"
-			},
-			{
-				"command": "terminalTest.processId",
-				"title": "Terminal API: Get process ID"
-			},
-			{
-				"command": "terminalTest.sendText",
-				"title": "Terminal API: Send Text"
-			},
-			{
-				"command": "terminalTest.sendTextNoNewLine",
-				"title": "Terminal API: Send Text (no implied \\n)"
-			},
-			{
-				"command": "terminalTest.show",
-				"title": "Terminal API: Show"
-			},
-			{
-				"command": "terminalTest.showPreserveFocus",
-				"title": "Terminal API: Show (preserving focus)"
-			},
-			{
-				"command": "terminalTest.terminals",
-				"title": "Terminal API: View terminals"
-			},
-			{
-				"command": "terminalTest.updateEnvironment",
-				"title": "Terminal API: Update environment"
-			},
-			{
-				"command": "terminalTest.clearEnvironment",
-				"title": "Terminal API: Clear environment"
-			},
-			{
-				"command": "terminalTest.registerTerminalLinkProvider",
-				"title": "Terminal API: Register link provider"
-			},
-			{
-				"command": "terminalTest.gitCommandPalette",
-				"title": "TerminalTest: Git Command Palette"
+				"command": "GitTerminal.gitCommandPalette",
+				"title": "Git Command Palette"
 			}
 		],
 		"terminal": {
 			"profiles": [
 				{
-					"id": "terminalTest.terminal-profile",
+					"id": "GitTerminal.terminal-profile",
 					"icon": "terminal",
 					"title": "Terminal API Profile"
 				}
